--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -1,6 +1,18 @@
 .Login {
   background: #fff;
 }
+@media screen and (max-width: 1600px) {
+  .Login .loginFrame {
+    width: 23%!important;
+    position: absolute!important;
+    top: 30%!important;
+    left: 60%!important;
+    padding: 28px 38px!important;
+  }
+  .Login .login-title {
+    width: 20%!important;
+  }
+}
 .Login .ant-input-affix-wrapper {
   height: 40px;
 }
@@ -14,19 +26,19 @@
 }
 .Login .logoBor .logoBg {
   width: 100%;
-  height: 60vh;
-  background: url("../../style/imgs/login.png") no-repeat left 50%;
-  background-size: 100% 100%;
+  height: 74vh;
+  background: url("../../style/imgs/login.png") center no-repeat;
+  background-size: 100%;
 }
 .Login .logoBor .loginFrame {
   position: absolute;
   top: 32%;
-  left: 61%;
-  width: 21%;
+  left: 62%;
+  width: 19%;
   min-height: 34vh;
   background: #fff;
   box-shadow: 0px 0px 10px rgba(34, 34, 34, 0.1);
-  padding: 30px 50px;
+  padding: 28px 48px;
 }
 .Login .logoBor .loginFrame .logoForm {
   padding-top: 30px;
@@ -37,6 +49,7 @@
   background: #006CFF;
   border: none;
   border-radius: 1px;
+  margin-top: 26px;
 }
 .Login .logoBor .loginFrame p {
   color: #4A4A4A;
