--- a/src/components/homePage/index.css
+++ b/src/components/homePage/index.css
@@ -128,11 +128,17 @@
 .homePage .computerRoom {
   display: flex;
   flex-direction: row;
+  position: relative;
+}
+@media screen and (max-width: 1600px) {
+  .homePage .computerRoom .computerRoom-context {
+    height: 85.5vh !important;
+  }
 }
 .homePage .computerRoom .computerRoom-context {
-  width: 78%;
+  width: 100%;
   background: #fff;
-  margin-right: 11px;
+  height: 61vh;
 }
 .homePage .computerRoom .computerRoom-context .RoomStatusLeft {
   width: 30%;
@@ -189,15 +195,30 @@
 }
 .homePage .computerRoom .computerRoom-camera {
   width: 22%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #f0f2f5;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 .homePage .computerRoom .computerRoom-camera .video-camera {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   height: 50px;
   background: #fff;
   margin-bottom: 4px;
 }
-.homePage .computerRoom .computerRoom-camera .video-camera .videoImg {
+.homePage .computerRoom .computerRoom-camera .video-camera .close {
+  margin: 5px 5px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #006fe3;
+}
+.homePage .computerRoom .computerRoom-camera .video-camera .videoCameraName {
+  display: flex;
+  align-items: center;
+}
+.homePage .computerRoom .computerRoom-camera .video-camera .videoCameraName .videoImg {
   display: inline-block;
   width: 24px;
   height: 24px;
@@ -205,7 +226,7 @@
   background-size: 100% 100%;
   margin-left: 20px;
 }
-.homePage .computerRoom .computerRoom-camera .video-camera .videoName {
+.homePage .computerRoom .computerRoom-camera .video-camera .videoCameraName .videoName {
   color: #FF7E1D;
   margin-left: 8px;
   font-size: 15px;
