--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -147,16 +147,19 @@
   .computerRoom {
     display: flex;
     flex-direction: row;
-
+    position: relative;
+    @media screen and (max-width:1600px){
+      .computerRoom-context {
+        height: 85.5vh!important;
+      }
+    }
     .computerRoom-context {
-      width: 78%;
+      width: 100%;
       background: #fff;
-      margin-right: 11px;
-
+      height: 61vh;
       .RoomStatusLeft {
         width: 30%;
       }
-
       .computerRoomStatus {
         display: flex;
         flex-direction: row;
@@ -222,27 +225,40 @@
 
     .computerRoom-camera {
       width: 22%;
-
+      position: absolute;
+      right: 0;
+      top:0;
+      background-color: #f0f2f5;
+      box-shadow: 1px 2px 10px rgba(0,0,0,.1);
       .video-camera {
         display: flex;
-        align-items: center;
+        justify-content: space-between;
         height: 50px;
         background: #fff;
         margin-bottom: 4px;
-
-        .videoImg {
-          display: inline-block;
-          width: 24px;
-          height: 24px;
-          background: url("../../style/ztt/imgs/alarmStatus.png") no-repeat;
-          background-size: 100% 100%;
-          margin-left: 20px;
+        .close{
+          margin: 5px 5px;
+          font-size: 20px;
+          cursor: pointer;
+          color: #006fe3;
         }
+        .videoCameraName{
+          display: flex;
+          align-items: center;
+          .videoImg {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background: url("../../style/ztt/imgs/alarmStatus.png") no-repeat;
+            background-size: 100% 100%;
+            margin-left: 20px;
+          }
 
-        .videoName {
-          color: #FF7E1D;
-          margin-left: 8px;
-          font-size: 15px;
+          .videoName {
+            color: #FF7E1D;
+            margin-left: 8px;
+            font-size: 15px;
+          }
         }
       }
 
