--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -115,17 +115,22 @@
 
 
 
+  .paginationWrap {
+    width: 96%;
+    position: absolute;
+    bottom: 0;
 
-
-
-
-
-
-
-  .pagination {
-    width: 100%;
-    padding: 8px 0;
-    text-align: center;
+    .pagination {
+      padding: 8px 0;
+      text-align: center;
+    }
   }
+
+
+
+
+
+
+
 
 }
