--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -152,13 +152,16 @@
       .computerRoom-context {
         height: 85.5vh!important;
       }
+      .RoomStatusLeft{
+        width: 24%!important;
+      }
     }
     .computerRoom-context {
       width: 100%;
       background: #fff;
       height: 61vh;
       .RoomStatusLeft {
-        width: 30%;
+        width: 20%;
       }
       .computerRoomStatus {
         display: flex;
@@ -222,19 +225,7 @@
         margin: 15px 55px;
       }
     }
-    @-webkit-keyframes fadeInOut {
-      0%   {left:500px; bottom:50px;}
-      25%  {left:500px;height:130px;bottom:50px;}
-      50%  {left:500px; height:160px;bottom:50px;}
-      75%  {left:500px;height:190px; bottom:50px;}
-      100% {left:500px; height:210px;bottom:50px;}
-    }
     .computerRoom-camera {
-      -webkit-animation-name: fadeInOut;
-      -webkit-animation-timing-function: ease-in-out;
-      -webkit-animation-iteration-count: infinite;
-      -webkit-animation-duration: 12s;
-      -webkit-animation-direction: alternate;
       width: 22%;
       position: absolute;
       right: 0;
@@ -278,7 +269,6 @@
         flex-direction: row;
         height: 70px;
         margin-bottom: 3px;
-
         .eqiIp-context {
           display: flex;
           flex-direction: column;
@@ -287,10 +277,14 @@
           line-height: 26px;
           background: #fff;
           color: #2E4699;
-          padding-left: 26px;
+          padding-left: 20px;
           font-size: 15px;
         }
-
+        .eqiIp-UHanld:nth-child(1){
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
         .eqiIp-UHanld {
           display: flex;
           flex-direction: column;
@@ -301,9 +295,6 @@
           background: #fff;
           margin-left: 4px;
           color: #2E4699;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
           font-size: 15px;
         }
       }
@@ -434,9 +425,12 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-
+          cursor: pointer;
+          .alarmVideo video{
+            width: 100%;
+          }
           .alarmVideo {
-            width: 60%;
+            width: 63%;
             padding: 10px 0;
             position: relative;
 
