--- a/src/style/jhy/less/defendTime.less
+++ b/src/style/jhy/less/defendTime.less
@@ -59,7 +59,7 @@
   }
 
   .tr:last-of-type::before {
-    content: '星期七';
+    content: '星期日';
     position: absolute;
     top: 330px;
     left: -60px;
