--- a/src/style/ztt/css/electronicMap.css
+++ b/src/style/ztt/css/electronicMap.css
@@ -34,8 +34,8 @@
   width: 5rem;
 }
 .electronicMap .input-card .input-item .btn {
-  width: 6rem;
-  margin: 0 1rem 0 2rem;
+  width: 5rem;
+  margin: 0 1rem;
   border: 1px solid #27a6f7;
   background-color: #fff;
   color: #27a6f7;
