--- a/src/style/ztt/css/electronicMap.less
+++ b/src/style/ztt/css/electronicMap.less
@@ -31,8 +31,8 @@
         width: 5rem;
       }
       .btn{
-        width: 6rem;
-        margin: 0 1rem 0 2rem;
+        width: 5rem;
+        margin: 0 1rem;
         border: 1px solid #27a6f7;
         background-color: #fff;
         color:#27a6f7;
