--- a/src/components/homePage/index.css
+++ b/src/components/homePage/index.css
@@ -1,6 +1,19 @@
 .homePage {
   display: flex;
   flex-direction: column;
+  -moz-user-select: none;
+  /*火狐*/
+  -webkit-user-select: none;
+  /*webkit浏览器*/
+  -ms-user-select: none;
+  /*IE10*/
+  -khtml-user-select: none;
+  /*早期浏览器*/
+  user-select: none;
+}
+.homePage .leaflet-bar,
+.homePage .leaflet-control {
+  display: none;
 }
 .homePage .unhanle {
   background-color: #006FE3;
@@ -137,6 +150,15 @@
   .homePage .computerRoom .RoomStatusLeft {
     width: 24%!important;
   }
+  .homePage .computerRoom .computer {
+    width: 62%!important;
+  }
+  .homePage .computerRoom .computerRoom-camera {
+    height: 85vh!important;
+  }
+  .homePage .computerRoom .lastAlarm {
+    height: 42vh!important;
+  }
 }
 .homePage .computerRoom .computerRoom-context {
   width: 100%;
@@ -203,6 +225,7 @@
   top: 0;
   background-color: #f0f2f5;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+  height: 61vh;
 }
 .homePage .computerRoom .computerRoom-camera .video-camera {
   display: flex;
@@ -353,6 +376,7 @@
 .homePage .computerRoom .computerRoom-camera .lastAlarm {
   background-color: #fff;
   padding: 18px 0;
+  height: 34.5vh;
 }
 .homePage .computerRoom .computerRoom-camera .lastAlarm .alarm-title {
   display: flex;
@@ -380,11 +404,18 @@
 }
 .homePage .computerRoom .computerRoom-camera .lastAlarm .alarmImg .alarmVideo video {
   width: 100%;
+  height: 13vh;
+  background: #7f7f7f;
+}
+.homePage .computerRoom .computerRoom-camera .lastAlarm .alarmImg .alarmVideo img {
+  height: 12vh;
 }
 .homePage .computerRoom .computerRoom-camera .lastAlarm .alarmImg .alarmVideo {
   width: 63%;
-  padding: 10px 0;
+  margin: 10px 0;
   position: relative;
+  height: 12vh;
+  border: 1px solid #d3d3d3;
 }
 .homePage .computerRoom .computerRoom-camera .lastAlarm .alarmImg .alarmVideo .alarmVideoBtn {
   position: absolute;
@@ -395,7 +426,7 @@
 }
 .homePage .computerRoom .computerRoom-camera .lastAlarm .alarmImg .alarmVideo .alarmVideoBottom {
   position: absolute;
-  bottom: 6%;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 32px;
