--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -1,6 +1,14 @@
 .homePage {
   display: flex;
   flex-direction: column;
+  -moz-user-select:none;/*火狐*/
+  -webkit-user-select:none;/*webkit浏览器*/
+  -ms-user-select:none;/*IE10*/
+  -khtml-user-select:none;/*早期浏览器*/
+  user-select:none;
+  .leaflet-bar,.leaflet-control{
+    display: none;
+  }
   .unhanle{
     background-color: #006FE3;
   }
@@ -155,6 +163,15 @@
       .RoomStatusLeft{
         width: 24%!important;
       }
+      .computer{
+        width: 62%!important;
+      }
+      .computerRoom-camera{
+        height: 85vh!important;
+      }
+      .lastAlarm{
+        height: 42vh!important;
+      }
     }
     .computerRoom-context {
       width: 100%;
@@ -232,6 +249,7 @@
       top:0;
       background-color: #f0f2f5;
       box-shadow: 1px 2px 10px rgba(0,0,0,.1);
+      height: 61vh;
       .video-camera {
         display: flex;
         justify-content: space-between;
@@ -399,7 +417,7 @@
       .lastAlarm {
         background-color: #fff;
         padding: 18px 0;
-
+        height: 34.5vh;
         .alarm-title {
           display: flex;
           align-items: center;
@@ -428,12 +446,18 @@
           cursor: pointer;
           .alarmVideo video{
             width: 100%;
+            height: 13vh;
+            background: #7f7f7f;
+          }
+          .alarmVideo img{
+            height: 12vh;
           }
           .alarmVideo {
             width: 63%;
-            padding: 10px 0;
+            margin: 10px 0;
             position: relative;
-
+            height: 12vh;
+            border: 1px solid #d3d3d3;
             .alarmVideoBtn {
               position: absolute;
               top: 34%;
@@ -444,7 +468,7 @@
 
             .alarmVideoBottom {
               position: absolute;
-              bottom: 6%;
+              bottom: 0;
               left: 0;
               width: 100%;
               height: 32px;
