--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -377,6 +377,7 @@
               align-items: center;
               font-family: 黑体;
               color: #4159a1;
+              cursor: pointer;
             }
           }
         }
