--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -382,6 +382,7 @@
   align-items: center;
   font-family: 黑体;
   color: #4159a1;
+  cursor: pointer;
 }
 .ploceinfomation .ploceinfomation-main .main-right .down {
   background-color: #fff;
