--- a/src/components/live/live.less
+++ b/src/components/live/live.less
@@ -3,3 +3,6 @@
   top: 42%!important;
   left: 45%!important;
 }
+.scaledstuff .vjs-fullscreen .vjs-progress-control {pointer-events:auto; }
+.scaledstuff .vjs-fullscreen .vjs-progress-control：before {display:none; }
+.scaledstuff .vjs-fullscreen .vjs-volume-control {display:block; }
