--- a/src/components/layout/LayerHeader/index.less
+++ b/src/components/layout/LayerHeader/index.less
@@ -35,6 +35,9 @@
   .headerRight{
     display: flex;
     align-items: center;
+    .alarmNum{
+      padding-right: 10%;
+    }
     .header-right{
       width: 36px;
       height: 36px;
