报警和用户

--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -559,7 +559,7 @@
           display: inline-block;
           position: absolute;
           right: 0;
-          bottom: 50%;
+          top: 16%;
           background-color: rgba(10,51,73,0.8);
           padding: 3px 10px;
           color: #fff;
