--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -177,37 +177,24 @@
       height: 100%;
       width: 69%;
       float: left;
+      .smallImg{
+        width: 100%;
+        display: flex;
+        padding-left: 16px;
+        .everyImg{
+          width: 60px;
+          height: 30px;
+          margin: 1% 1%;
+        }
+        .everyImg img{
+          width: 100%;
+          height: 100%;
+          cursor: pointer;
+        }
+      }
       .main-left-L{
         height: 360px;
         padding: 20px 20px 0 20px;
-        .swiper-container{
-          margin-top: 2px;
-          .everyImg{
-            width: 20%;
-          }
-          .swiper-slide img{
-            width: 100%;
-            padding: 0 2%;
-          }
-          .prev{
-            position: absolute;
-            top: 24%;
-            left: 10px;
-            margin-top: -22px;
-            z-index: 10;
-            cursor: pointer;
-            color: #fff;
-          }
-          .next{
-            position: absolute;
-            top: 24%;
-            right:10px;
-            margin-top: -22px;
-            z-index: 10;
-            cursor: pointer;
-            color: #fff;
-          }
-        }
         .img-up-fu img{
           width: 100%;
           height: 58%;
@@ -216,7 +203,7 @@
           position: relative;
           .alarmImg{
             width:100%;
-            height:278px;
+            height:340px;
             position: relative;
             .nodata{
               width: 74px;
