--- a/src/style/jhy/less/defendTime.less
+++ b/src/style/jhy/less/defendTime.less
@@ -251,6 +251,7 @@
   }
 
   .deleteWrap {
+    margin-top: 2px;
 
     .ant-btn:hover,
     .ant-btn:focus {
@@ -260,9 +261,12 @@
     }
 
     .delete {
-      margin-top: 19px;
+      margin-top: 20px;
       color: red;
       display: block;
+      width: 30px;
+      height: 30px;
+      padding: 5px;
 
     }
   }
