--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -1,23 +1,52 @@
 .homePage {
+  ::-webkit-scrollbar {
+    //设置整个滚动条宽高
+    width: 6px;
+    height: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    //设置滑块
+    width: 6px;
+    height: 6px;
+    background-color: rgba(255, 255, 255, 0); //设置背景透明
+    border-radius: 3px;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0); //设置背景透明
+  }
+
   display: flex;
   flex-direction: column;
-  -moz-user-select:none;/*火狐*/
-  -webkit-user-select:none;/*webkit浏览器*/
-  -ms-user-select:none;/*IE10*/
-  -khtml-user-select:none;/*早期浏览器*/
+  -moz-user-select:none;
+  /*火狐*/
+  -webkit-user-select:none;
+  /*webkit浏览器*/
+  -ms-user-select:none;
+  /*IE10*/
+  -khtml-user-select:none;
+  /*早期浏览器*/
   user-select:none;
-  .leaflet-bar,.leaflet-control{
+
+  .leaflet-bar,
+  .leaflet-control {
     display: none;
   }
-  .unhanle{
+
+  .unhanle {
     background-color: #006FE3;
   }
-  .policebg{
+
+  .policebg {
     background-color: #FF7200;
   }
-  .falsePolicebg{
+
+  .falsePolicebg {
     background-color: #B28750;
   }
+
   .equNum {
     display: flex;
     justify-content: space-between;
@@ -156,30 +185,38 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    @media screen and (max-width:1600px){
+
+    @media screen and (max-width:1600px) {
       .computerRoom-context {
-        height: 85.5vh!important;
+        height: 85.5vh !important;
       }
-      .RoomStatusLeft{
-        width: 24%!important;
+
+      .RoomStatusLeft {
+        width: 24% !important;
       }
-      .computer{
-        width: 62%!important;
+
+      .computer {
+        width: 62% !important;
       }
-      .computerRoom-camera{
-        height: 85vh!important;
+
+      .computerRoom-camera {
+        height: 85vh !important;
       }
-      .lastAlarm{
-        height: 42vh!important;
+
+      .lastAlarm {
+        height: 42vh !important;
       }
     }
+
     .computerRoom-context {
       width: 100%;
       background: #fff;
       height: 61vh;
+
       .RoomStatusLeft {
         width: 20%;
       }
+
       .computerRoomStatus {
         display: flex;
         flex-direction: row;
@@ -242,29 +279,34 @@
         margin: 15px 55px;
       }
     }
+
     .computerRoom-camera {
       width: 22%;
       position: absolute;
       right: 0;
-      top:0;
+      top: 0;
       background-color: #f0f2f5;
-      box-shadow: 1px 2px 10px rgba(0,0,0,.1);
+      box-shadow: 1px 2px 10px rgba(0, 0, 0, .1);
       height: 61vh;
+
       .video-camera {
         display: flex;
         justify-content: space-between;
         height: 50px;
         background: #fff;
         margin-bottom: 4px;
-        .close{
+
+        .close {
           margin: 5px 5px;
           font-size: 20px;
           cursor: pointer;
           color: #006fe3;
         }
-        .videoCameraName{
+
+        .videoCameraName {
           display: flex;
           align-items: center;
+
           .videoImg {
             display: inline-block;
             width: 24px;
@@ -287,6 +329,7 @@
         flex-direction: row;
         height: 70px;
         margin-bottom: 3px;
+
         .eqiIp-context {
           display: flex;
           flex-direction: column;
@@ -298,11 +341,13 @@
           padding-left: 20px;
           font-size: 15px;
         }
-        .eqiIp-UHanld:nth-child(1){
+
+        .eqiIp-UHanld:nth-child(1) {
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
         }
+
         .eqiIp-UHanld {
           display: flex;
           flex-direction: column;
@@ -418,6 +463,7 @@
         background-color: #fff;
         padding: 18px 0;
         height: 34.5vh;
+
         .alarm-title {
           display: flex;
           align-items: center;
@@ -444,20 +490,24 @@
           align-items: center;
           justify-content: center;
           cursor: pointer;
-          .alarmVideo video{
+
+          .alarmVideo video {
             width: 100%;
             height: 13vh;
             background: #7f7f7f;
           }
-          .alarmVideo img{
+
+          .alarmVideo img {
             height: 12vh;
           }
+
           .alarmVideo {
             width: 63%;
             margin: 10px 0;
             position: relative;
             height: 12vh;
             border: 1px solid #d3d3d3;
+
             .alarmVideoBtn {
               position: absolute;
               top: 34%;
@@ -504,9 +554,11 @@
 
   .alarminfor {
     margin: 12px 0 15px 0;
-    .gutter-box{
+
+    .gutter-box {
       cursor: pointer;
     }
+
     .alarminfornikName {
       display: flex;
       justify-content: flex-end;
@@ -517,36 +569,41 @@
         margin-right: 7px;
         font-size: 15px;
       }
-      .iconRight{
+
+      .iconRight {
         color: #066fff;
       }
     }
 
     .gutter-example {
       margin-top: 16px;
+
       .gutter-box {
         position: relative;
         min-height: 14vh;
         border: 1px solid #d0c9c9;
         background: #EEEEEE;
-        .alarmVideoBtn{
+
+        .alarmVideoBtn {
           position: absolute;
           top: 34%;
           left: 42%;
           width: 16%;
           cursor: pointer;
         }
-        .policeStatus{
+
+        .policeStatus {
           display: inline-block;
           padding: 5px 10px;
           color: #fff;
           font-size: 13px;
           border-bottom-right-radius: 20px;
-          border-top-right-radius:  20px;
+          border-top-right-radius: 20px;
           position: absolute;
           left: 0;
           bottom: 70%;
-          .policeStatusCicle{
+
+          .policeStatusCicle {
             display: inline-block;
             width: 10px;
             height: 10px;
@@ -555,17 +612,19 @@
             margin-right: 5px;
           }
         }
-        .policeTimes{
+
+        .policeTimes {
           display: inline-block;
           position: absolute;
           right: 0;
           top: 16%;
-          background-color: rgba(10,51,73,0.8);
+          background-color: rgba(10, 51, 73, 0.8);
           padding: 3px 10px;
           color: #fff;
           border-radius: 20px;
           font-size: 12px;
         }
+
         .alarminforBg {
           position: absolute;
           bottom: 0;
@@ -575,6 +634,7 @@
           background-color: rgba(20, 39, 69, 0.9);
           display: flex;
           align-items: center;
+
           .alarminforCirle {
             display: inline-block;
             width: 10px;
@@ -583,7 +643,8 @@
             border-radius: 50%;
             margin: 0 14px;
           }
-          .alarminforFont{
+
+          .alarminforFont {
             color: #fff;
             font-size: 14px;
           }
