--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -50,6 +50,7 @@
   border: none;
   border-radius: 1px;
   margin-top: 26px;
+  font-size: 17px;
 }
 .Login .logoBor .loginFrame p {
   color: #4A4A4A;
