--- a/src/components/login/index.less
+++ b/src/components/login/index.less
@@ -46,6 +46,7 @@
           border: none;
           border-radius: 1px;
           margin-top: 26px;
+          font-size: 17px;
         }
       }
     }
