--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -255,8 +255,19 @@
   background-color: #020202;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-R {
+  position: relative;
   height: 360px;
   padding: 20px 20px 0 0;
+}
+.ploceinfomation .ploceinfomation-main .main-left .main-left-R .picture {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 360px;
+  border: 3px solid red;
+  z-index: 999;
 }
 .ploceinfomation .ploceinfomation-main .main-left .updown Button {
   display: flex;
