--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -253,8 +253,19 @@
         background-color: #020202;
       }
       .main-left-R{
+        position: relative;
         height: 360px;
         padding:20px 20px 0 0;
+        .picture{
+          display: inline-block;
+          position: absolute;
+          top:0;
+          left: 0;
+          width: 100%;
+          height: 360px;
+          border: 3px solid red;
+          z-index: 999;
+        }
       }
       .updown Button{
         display: flex;
