--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -575,14 +575,15 @@
       }
     }
 
-    .gutter-example {
-      margin-top: 16px;
+    .swiper-container {
+      margin-top: 10px;
 
-      .gutter-box {
+      .swiper-slide {
         position: relative;
         min-height: 14vh;
         border: 1px solid #d0c9c9;
         background: #EEEEEE;
+        cursor: pointer;
 
         .alarmVideoBtn {
           position: absolute;
