--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -182,9 +182,10 @@
         display: flex;
         padding-left: 16px;
         .everyImg{
-          width: 60px;
+          width: 48px;
           height: 30px;
-          margin: 1% 1%;
+          padding-left: 2px;
+          margin: 2px 3px;
         }
         .everyImg img{
           width: 100%;
