--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -2,6 +2,10 @@
   .selectBorder{
     border: 1px solid #ff7200!important;
   }
+  .policeList .picImg{
+    width: 100%;
+    min-height: 14vh;
+  }
   .policeList{
     min-height: 14vh;
     background: #EEEEEE;
