--- a/src/components/broadcast/broadcast.css
+++ b/src/components/broadcast/broadcast.css
@@ -50,10 +50,15 @@
   width: 70px;
   height: 70px;
 }
+.broadcast .borderBot .videoImg {
+  width: 100%;
+  height: 100%;
+  min-height: 14vh;
+}
 .broadcast .borderBot {
   position: relative;
   border: 1px solid #5a5555;
-  min-height: 15vh;
+  min-height: 14vh;
   margin: 10px 0;
 }
 .broadcast .borderBot .videoBtn {
