--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -49,10 +49,15 @@
      height: 70px;
     }
   }
+  .borderBot .videoImg{
+    width: 100%;
+    height: 100%;
+    min-height: 14vh;
+  }
   .borderBot{
     position: relative;
     border: 1px solid #5a5555;
-    min-height: 15vh;
+    min-height: 14vh;
     margin: 10px 0;
     .videoBtn{
       width: 16%;
