报警图片合并

--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,4 +1,10 @@
 .ploceinfomation{
+  .nodataEmpty{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 5%;
+  }
   .selectBorder{
     border: 1px solid #ff7200!important;
   }
@@ -190,6 +196,7 @@
           height: 30px;
           padding-left: 2px;
           margin: 2px 3px;
+          display: flex;
         }
         .everyImg img{
           width: 100%;
