--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -1,6 +1,12 @@
 .ploceinfomation {
   background-color: #f0f2f5;
 }
+.ploceinfomation .nodataEmpty {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 5%;
+}
 .ploceinfomation .selectBorder {
   border: 1px solid #ff7200 !important;
 }
@@ -193,6 +199,7 @@
   height: 30px;
   padding-left: 2px;
   margin: 2px 3px;
+  display: flex;
 }
 .ploceinfomation .ploceinfomation-main .main-left .smallImg .everyImg img {
   width: 100%;
