--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -40,7 +40,7 @@
   .pagination{
     width: 100%;
     text-align: center;
-    padding-bottom: 20px;
+    padding: 20px 0;
   }
   .nodata{
     display: flex;
@@ -194,7 +194,7 @@
         .everyImg{
           width: 48px;
           height: 30px;
-          padding-left: 2px;
+          padding: 2px;
           margin: 2px 3px;
           display: flex;
         }
