--- a/src/style/css/common.less
+++ b/src/style/css/common.less
@@ -1,6 +1,9 @@
 @import './loading.less';
 @import './reset.less';
 @height:100%;
+*,.ant-modal-body,.ant-modal{
+  font-family:'Microsoft YaHei';
+}
 .App{
 	height: @height;
 }
