--- a/src/style/css/common.css
+++ b/src/style/css/common.css
@@ -46,6 +46,11 @@ code {
 img {
   width: 100%;
 }
+*,
+.ant-modal-body,
+.ant-modal {
+  font-family: 'Microsoft YaHei';
+}
 .App {
   height: 100%;
 }
