--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -10,6 +10,11 @@
 .ploceinfomation .selectBorder {
   border: 1px solid #ff7200 !important;
 }
+.ploceinfomation .ant-switch-loading-icon,
+.ploceinfomation .ant-switch::after {
+  width: 16px!important;
+  height: 16px!important;
+}
 .ploceinfomation .policeList .picImg {
   width: 100%;
   min-height: 14vh;
@@ -180,31 +185,36 @@
 }
 .ploceinfomation .ploceinfomation-main {
   height: 400px;
-  background-color: #f0f2f5;
+  background-color: #fff;
   margin-top: 15px;
 }
+.ploceinfomation .ploceinfomation-main .pageLeft {
+  line-height: 400px;
+}
+.ploceinfomation .ploceinfomation-main .pageLeft .anticon {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #EEEEEE;
+  font-size: 26px;
+  cursor: pointer;
+}
 .ploceinfomation .ploceinfomation-main .main-left {
-  background-color: #fff;
   height: 100%;
-  width: 69%;
+  width: 74%;
   float: left;
 }
-.ploceinfomation .ploceinfomation-main .main-left .smallImg {
-  width: 100%;
+.ploceinfomation .ploceinfomation-main .main-left .updown-left {
+  margin: 0 10px;
+  width: 20px;
+  height: 20px;
+  background-color: #006fe3;
   display: flex;
-  padding-left: 16px;
-}
-.ploceinfomation .ploceinfomation-main .main-left .smallImg .everyImg {
-  width: 48px;
-  height: 30px;
-  padding: 2px;
-  margin: 2px 3px;
-  display: flex;
-}
-.ploceinfomation .ploceinfomation-main .main-left .smallImg .everyImg img {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-L {
   height: 360px;
@@ -219,7 +229,7 @@
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .alarmImg {
   width: 100%;
-  height: 340px;
+  height: 360px;
   position: relative;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .alarmImg .nodata {
@@ -240,35 +250,57 @@
   width: 100%;
   height: 100%;
 }
-.ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .img-up-fu-word {
+.ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .smallImg {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 36px;
+  display: flex;
+  background-color: rgba(14, 18, 23, 0.7);
+  padding: 3px 0;
+}
+.ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .smallImg .everyImg {
+  width: 50px;
+  height: 34px;
+  padding: 2px;
+  margin: 2px 3px;
+  display: flex;
+}
+.ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .smallImg .everyImg img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .img-up-fu-word {
+  position: absolute;
+  top: 10%;
+  right: 1px;
   background-color: rgba(20, 39, 69, 0.5);
   display: flex;
   align-items: center;
+  padding: 4px 7px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  font-size: 14px;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .img-up-fu-word .img-up-fu-word-span {
   color: #fff;
-  font-size: 14px;
   font-family: 黑体;
-  margin-left: 12px;
+  margin-left: 10px;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-L .img-up-fu .img-up-fu-word .circle {
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   background-color: #ff7200;
-  margin-left: 24px;
+  margin-left: 5px;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-R video {
   background-color: #020202;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-R {
   position: relative;
-  height: 360px;
+  height: 378px;
   padding: 20px 20px 0 0;
 }
 .ploceinfomation .ploceinfomation-main .main-left .main-left-R .picture {
@@ -293,47 +325,58 @@
   font-size: 13px;
   color: #b9b9b9;
 }
-.ploceinfomation .ploceinfomation-main .main-left .updown .updown-left {
-  margin: 0 10px;
-  width: 20px;
-  height: 20px;
-  background-color: #006fe3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-}
 .ploceinfomation .ploceinfomation-main .main-right {
   float: right;
-  background-color: #f0f2f5;
-  width: 30%;
+  width: 25%;
   height: 100%;
 }
 .ploceinfomation .ploceinfomation-main .main-right .up {
   background-color: #fff;
   width: 100%;
-  height: 70%;
+  font-weight: bolder;
+  font-size: 15px;
+}
+.ploceinfomation .ploceinfomation-main .main-right .up .alarmInfor {
+  color: #294499;
 }
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName {
-  margin: 0 auto 8px auto;
+  margin: 8px 0;
   width: 90%;
-  height: 35px;
+  height: 38px;
   color: #4159a1;
-  font-family: 黑体;
+  background-color: #f3f3f5;
+  display: flex;
+  align-items: center;
+}
+.ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipNamefiled {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipNamefiled .switchfiled {
+  height: 20px;
+  margin-left: 4%;
 }
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-left {
   height: 100%;
-  background-color: #f3f3f5;
   border-right: #e4e4e5 solid 1px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-left .switchfiled {
+  height: 20px;
+  margin-left: 4%;
+}
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-right {
   height: 100%;
-  background-color: #f3f3f5;
   display: flex;
   align-items: center;
+}
+.ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-right .switchfiled {
+  height: 20px;
+  margin-left: 4%;
 }
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-right .equipName-right-word {
   margin-left: 20px;
@@ -348,57 +391,39 @@
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName .equipName-right-caralarm .equipName-right-word {
   margin-left: 20px;
 }
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget {
-  margin: auto;
-  height: 90px;
+.ploceinfomation .ploceinfomation-main .main-right .down {
+  margin-top: 4px;
   width: 90%;
 }
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .showfq {
-  width: 100px;
-  height: 25px;
-  background-color: #006fe4;
-  border-radius: 25px ;
-  margin-right: 30px;
-  margin-top: 10px;
-}
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .showfq .zdupdate-word {
-  line-height: 25px;
-  font-size: 13px;
-  color: #fff;
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandleTitle {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  font-size: 15px;
+  font-weight: bolder;
+  border-top: 3px solid #f3f3f5;
+  padding: 16px 0;
 }
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .showfq .cicrle {
-  width: 15px;
-  height: 15px;
-  line-height: 15px;
-  background-color: #fff;
-  border-radius: 50%;
-  float: right;
-  margin: 5px;
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandleTitle .alarmsta {
+  color: #203c96;
 }
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .showfq .cicrle .cicrle-icon {
-  color: #006fe4;
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandleTitle .addDuplicate {
+  color: #006de7;
 }
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .addqc {
-  background-color: #1ECD6E;
-}
-.ploceinfomation .ploceinfomation-main .main-right .up .showTaget .addqc .addqcdiv {
-  height: 60px;
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandle {
   background-color: #f3f3f5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 黑体;
-  color: #4159a1;
-  cursor: pointer;
+  padding: 3% 0;
 }
-.ploceinfomation .ploceinfomation-main .main-right .down {
-  background-color: #fff;
-  width: 100%;
-  height: 27%;
-  margin-top: 10px;
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandle .policeBtn {
+  color: #fff;
+  margin-left: 20%;
+  padding: 0 16%;
+  border: none;
+}
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandle .policq {
+  background-color: #fb380c;
+}
+.ploceinfomation .ploceinfomation-main .main-right .down .equipHandle .policex {
+  background-color: #ff7100;
 }
 .ploceinfomation .ploceinfomation-main .main-right .down .alarmcl {
   width: 90px;
@@ -531,16 +556,23 @@
   background-color: #fff;
   margin-right: 5px;
 }
-.ploceinfomation .gutter-row .gutter-box .policeTimes {
-  display: inline-block;
+.ploceinfomation .gutter-row .gutter-box .policeNikName {
   position: absolute;
   right: 0;
   bottom: 70%;
   background-color: rgba(10, 51, 73, 0.8);
-  padding: 2px 10px;
+  padding: 3px 6px;
   color: #fff;
   border-radius: 20px;
-  font-size: 12px;
+  font-size: 13px;
+}
+.ploceinfomation .gutter-row .gutter-box .policeNikName .policeCircle {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #FF7200;
+  margin-right: 5px;
 }
 .ploceinfomation .gutter-row .gutter-box .policeBottom {
   position: absolute;
@@ -551,13 +583,5 @@
   background-color: rgba(19, 36, 64, 0.8);
   display: flex;
   align-items: center;
-}
-.ploceinfomation .gutter-row .gutter-box .policeBottom .policeCircle {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #FF7200;
-  margin-left: 18px;
 }
 /*# sourceMappingURL=ploceinfomation.css.map */
