修改设备——摄像头名称

--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -184,9 +184,10 @@
   border: none;
 }
 .ploceinfomation .ploceinfomation-main {
-  height: 400px;
+  height: 405px;
   background-color: #fff;
   margin-top: 15px;
+  padding-top: 3px;
 }
 .ploceinfomation .ploceinfomation-main .pageLeft {
   line-height: 400px;
