--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -183,9 +183,10 @@
     }
   }
   .ploceinfomation-main{
-    height: 400px;
+    height: 405px;
     background-color: #fff;
     margin-top: 15px;
+    padding-top: 3px;
     .pageLeft{
       line-height: 400px;
       .anticon{
